# divergulent

./: .gitignore  .pre-commit-config.yaml  .stestr.conf  AGENTS.md  ARCHITECTURE.md  LICENSE  PLAN-TEMPLATE.md  PUSH-TEMPLATE.md  README.md  RELEASE-SETUP.md  pyproject.toml  tox.ini
.github/: actionlint.yaml
.github/workflows/: build-bts.yml  build-cache.yml  build-classification.yml  release.yml  sample-output.yml  unit-tests.yml
divergulent/: __init__.py  builder.py  bundle.py  cache.py  cli.py  debversion.py  dep3.py  http.py  inventory.py  progress.py  score.py  verify.py
divergulent/classify/: __init__.py  __main__.py  bts.py  claim.py  classification_bundle.py  classify.py  cli.py  content.py  corpus.py  cross_reference.py  export.py  fingerprint.py  injection.py  ledger.py  measure.py  popcon.py  reach.py  record.py  review.py  review_web.py  reviewability.py  risk.py  rules.py  security_tracker.py  triage.py  triage_driver.py  triage_record.py  verdict.py  workspace.py
divergulent/sources/: apt_patches.py  base.py  bundle_backed.py  debian_patches.py  repology.py
divergulent/tests/: test_apt_patches.py  test_bts.py  test_builder.py  test_bundle.py  test_bundle_backed.py  test_cache.py  test_claim.py  test_classification_bundle.py  test_classify.py  test_classify_cli.py  test_cli.py  test_cli_bundle.py  test_cli_cache.py  test_cli_classification.py  test_cli_divergence.py  test_cli_score.py  test_cli_show.py  test_cli_staleness.py  test_content.py  test_corpus.py  test_cross_reference.py  test_debian_patches.py  test_debversion.py  test_dep3.py  test_export.py  test_fetch.py  test_fingerprint.py  test_http.py  test_injection.py  test_inventory.py  test_ledger.py  test_ledger_cli.py  test_measure.py  test_popcon.py  test_progress.py  test_reach.py  test_record.py  test_record_external.py  test_repology.py  test_review.py  (+14 more)
divergulent/tests/fixtures/: dpkg-query-sample.txt  repology-project-sample.json  sources-index-sample.txt
docs/: deterministic-rules.md  index.md  order.yml  what-is-divergulent.md  workflow.md
docs/plans/: PLAN-curation-cli-ergonomics.md  PLAN-faster-full-run-phase-01-rate-limits.md  PLAN-faster-full-run-phase-02-repology-bulk.md  PLAN-faster-full-run-phase-03-progress.md  PLAN-faster-full-run-phase-04-revert-bulk.md  PLAN-faster-full-run-phase-05-concurrency.md  PLAN-faster-full-run.md  PLAN-full-machine-run-phase-01-overview.md  PLAN-full-machine-run-phase-02-classify.md  PLAN-full-machine-run-phase-03-ci.md  PLAN-full-machine-run.md  PLAN-initial-phase-01-inventory.md  PLAN-initial-phase-02-staleness.md  PLAN-initial-phase-03-divergence.md  PLAN-initial-phase-04-scoring.md  PLAN-initial-phase-05-show.md  PLAN-initial.md  PLAN-patch-classification-phase-01-findings.md  PLAN-patch-classification-phase-01-fingerprint.md  PLAN-patch-classification-phase-02-extractors.md  PLAN-patch-classification-phase-02-findings.md  PLAN-patch-classification-phase-03-findings.md  PLAN-patch-classification-phase-03-ledger.md  PLAN-patch-classification-phase-04-findings.md  PLAN-patch-classification-phase-04-llm-triage.md  PLAN-patch-classification-phase-04-package-age.md  PLAN-patch-classification-phase-04-reach-axis.md  PLAN-patch-classification-phase-04-review-notes.md  PLAN-patch-classification-phase-04-review-web.md  PLAN-patch-classification-phase-04-reviewability-axis.md  PLAN-patch-classification-phase-04-risk-gate.md  PLAN-patch-classification-phase-04-triage-backend.md  PLAN-patch-classification-phase-05-bundle.md  PLAN-patch-classification-phase-06-bts-hosting.md  PLAN-patch-classification-phase-06-cross-reference.md  PLAN-patch-classification-phase-06-findings.md  PLAN-patch-classification.md  PLAN-prompt-injection-screening-phase-01-findings.md  PLAN-prompt-injection-screening-phase-03-findings.md  PLAN-prompt-injection-screening-phase-03-observation.md  (+9 more)
tools/: build-bts.sh  build-cache.sh  build-classification.sh  check-dns-cache.sh  flake8wrap.sh  generate-sample-output.sh  publish-bts.sh  publish-cache.sh  publish-classification.sh  sign-bundle.sh
tools/injection-screening/: README.md  model_scorer.py  tripwire.py
