[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[simple]>=6.2",
    "wheel",
    "build",
    "twine"
]
build-backend = "setuptools.build_meta"

[project]
name = "divergulent"
dynamic = ["version"]

description = "Measure how far a Debian machine has drifted from pure upstream"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Michael Still", email = "mikal@stillhq.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-debian",  # gpl — Debian version parsing and comparison
]

[project.urls]
"Homepage" = "https://github.com/shakenfist/divergulent"
"Bug Tracker" = "https://github.com/shakenfist/divergulent/issues"

[project.scripts]
divergulent = "divergulent.cli:main"

[project.optional-dependencies]
test = [
    "coverage",         # apache2
    "testtools<2.9.2",  # mit; stestr uses _b removed in 2.8
    "mock",             # bsd
    "stestr",           # apache2
    "flake8",           # mit
]

[tool.setuptools]
packages = [
    "divergulent",
    "divergulent.sources",
    "divergulent.tests",
]

[tool.setuptools_scm]
git_describe_command = "git describe --dirty --tags --match v* --first-parent"
write_to = "divergulent/_version.py"
