[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[simple]>=6.2",
    "wheel",
    "build",
    "twine"
]
build-backend = "setuptools.build_meta"

[project]
name = "divergulent"
dynamic = ["version"]

description = "Measure how far a Debian machine has drifted from pure upstream"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Michael Still", email = "mikal@stillhq.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-debian",  # gpl — Debian version parsing and comparison
]

[project.urls]
"Homepage" = "https://github.com/shakenfist/divergulent"
"Bug Tracker" = "https://github.com/shakenfist/divergulent/issues"

[project.scripts]
divergulent = "divergulent.cli:main"
# Curation-side dispatcher (cache builder / classifier operator only).
divergulent-classify = "divergulent.classify.cli:main"

[project.optional-dependencies]
# Optional, opt-in Sigstore signature verification of a downloaded cache
# bundle. Kept out of the base install so the default footprint stays
# stdlib + python-debian; the always-on spot-check trust path needs none of it.
verify = [
    "sigstore>=4.3,<5",  # apache2 — Sigstore keyless signature verification
]
# Optional, opt-in LLM triage of the substantive patch residue. Curation-side
# only (the cache builder), never a runtime import; the base install stays
# stdlib + python-debian. The anthropic SDK is imported lazily in
# classify/triage.py, mirroring the sigstore verify extra.
triage = [
    "anthropic>=0.40",  # mit — Anthropic API client for LLM triage
]
# Optional, opt-in local web UI for human review of the patch residue.
# Curation-side only and localhost-bound; Flask + Jinja2 (autoescaping HTML)
# live behind this extra so the default scan/report install stays stdlib +
# python-debian. Pair with verify to sign verdicts: divergulent[review,verify].
review = [
    "flask>=3,<4",  # bsd — local human-review web UI (pulls Jinja2 + Werkzeug)
]
test = [
    "coverage",         # apache2
    "testtools<2.9.2",  # mit; stestr uses _b removed in 2.8
    "mock",             # bsd
    "stestr",           # apache2
    "flake8",           # mit
]

[tool.setuptools]
packages = [
    "divergulent",
    "divergulent.sources",
    "divergulent.tests",
]

[tool.setuptools_scm]
git_describe_command = "git describe --dirty --tags --match v* --first-parent"
write_to = "divergulent/_version.py"
